--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,6 @@ html, body { height: 100%; }
 body { 
   margin: 0; 
   font-family: Roboto, "Helvetica Neue", sans-serif; 
+  color: #fff;
+  background-color: #2F2F2F;
 }
