--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,49 @@
-<h1>
-  App component is working just fine!
-</h1>
+<!-- Start of the NavBar -->
+
+<header class="site-header">
+
+  <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top border-bottom">
+    
+    <div class="container">
+      <a class="navbar-brand mr-5" routerLink="">
+        <h4 class="logo fw-bolder">
+          Dona
+        </h4>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarToggle">            
+        <div class="navbar-nav mr-auto font-weight-light">
+          <a class="nav-item nav-link" routerLink="">
+            Gift Catalogue 
+          </a>
+          <a class="nav-item nav-link" routerLink="work">
+            Our Work
+          </a>
+          <a class="nav-item nav-link" routerLink="about">
+            About Us
+          </a>
+
+        </div>
+
+
+        <!-- Navbar Right Side section -->
+        <div class="navbar-nav font-weight-light">    
+            
+          <a class="nav-item nav-link" routerLink="login">
+            Register/Login
+          </a>                 
+          
+        </div>    
+      </div>
+    </div>
+
+  </nav>
+
+</header>
+
+<!-- End of NavBar -->
+
 
 <router-outlet></router-outlet>
