--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,3 +47,43 @@
 
 
 <router-outlet></router-outlet>
+
+
+<!-- Start of footer -->
+
+<footer class="mt-5">
+
+  <div class="container bottom text-center border-top">
+    <div class="mt-2em">
+      <div class="row d-flex justify-content-center icons">
+        <a href="https://github.com/ShaviyaVictor" target="_blank">
+          <i class="bi bi-github futa"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/victor-shaviya-532ab0110/" target="_blank">
+          <i class="bi bi-linkedin futa"></i>
+        </a>
+        <a href="https://www.facebook.com/afroignite.house" target="_blank">
+          <i class="bi bi-facebook futa"></i>
+        </a>
+        <a href="https://www.instagram.com/ignition_reads/" target="_blank">
+          <i class="bi bi-instagram futa"></i>
+        </a>
+      </div>
+    </div>
+    <small>
+      <a class="nav-link active text-light" aria-current="page" href="https://rejelea.herokuapp.com/" target="_blank">
+        #StopWarInUkraine
+      </a>
+      <span>
+        All donations are tax deductable in full or in part.
+      </span>
+    </small>
+    <h6 class="small mt-3">
+      Copyright &copy; 2022 ||  Group12. DonaPlatform || All Rights Reserved.
+    </h6>
+  </div>
+
+</footer>
+
+<!-- End of footer -->
+
