--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,17 @@ body {
   color: #fff;
   background-color: #2F2F2F;
 }
+
+
+
+/* Small devices (portrait tablets and large phones, 600px and down) */
+@media screen and (max-width: 767px) {
+  
+}
+
+@media screen and (max-width: 575px) {
+  .futa {
+    font-size: 1em;
+  }
+}
+
