--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif; 
   color: #fff;
   background-color: #2F2F2F;
+  margin-top: 5rem;
 }
 
 
