--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,24 +56,28 @@
   <div class="container bottom text-center border-top">
     <div class="mt-2em">
       
-      <form class="form-inline">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      <div class="row">
+        <div class="col-center-box mx-auto mb-3">
+          <h5>
+            Sign up for our monthly newsletter:
+          </h5>
+          <form class="form-inline">
+            <div class="input-group mr-3 mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="">First and last name</span>
+              </div>
+              <input type="text" class="form-control">
+              <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="email" class="form-control mb-3" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">          
+            </div>
+            <button type="submit" class="btn btn-primary ml-3 mb-3">SUBMIT</button>
+          </form>
         </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+      </div>
 
-      <div class="row d-flex justify-content-center icons">
+      <div class="row d-flex justify-content-center icons mt-2em">
         <a href="https://github.com/ShaviyaVictor" target="_blank">
           <i class="bi bi-github futa"></i>
         </a>
