Change button styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,7 +72,7 @@
             <div class="form-group">
               <input type="email" class="form-control mb-3" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">          
             </div>
-            <button type="submit" class="btn btn-primary ml-3 mb-3">SUBMIT</button>
+            <button type="submit" class="btn btn-outline-warning ml-3 mb-3">SUBMIT</button>
           </form>
         </div>
       </div>
