Add section1 text content

--- a/src/app/homeview/homeview.component.html
+++ b/src/app/homeview/homeview.component.html
@@ -1,3 +1,8 @@
-<h1>
-  Set to start
-</h1>
+<div class="container-fluid img1">
+  <h2>
+    GIFT CATALOG
+  </h2>
+  <p>
+    Give gifts that empower<br>kids to create lasting change.
+  </p>
+</div>
