Add bg img for section1

--- a/src/app/homeview/homeview.component.html
+++ b/src/app/homeview/homeview.component.html
@@ -1,8 +1,14 @@
-<div class="container-fluid img1">
-  <h2>
-    GIFT CATALOG
-  </h2>
-  <p>
-    Give gifts that empower<br>kids to create lasting change.
-  </p>
-</div>
+<section class="container-fluid img1">
+  <div class="position">
+    <div class="row">
+      <h2>
+        GIFT CATALOG
+      </h2>     
+    </div>
+    <div class="row">
+      <p>
+        Give gifts that empower<br>kids to create lasting change.
+      </p>
+    </div>
+  </div>
+</section>
