--- a/src/app/homeview/homeview.component.css
+++ b/src/app/homeview/homeview.component.css
@@ -1,3 +1,13 @@
 .img1 {
-  background-image: url();
+  background-image: url(../../assets/Image-1.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 38vh;
+}
+
+.position {
+  position: relative;
+  left: 33vw;
+  top: 20vh;
 }
