--- a/src/app/homeview/homeview.component.html
+++ b/src/app/homeview/homeview.component.html
@@ -1,14 +1,33 @@
 <section class="container-fluid img1">
-  <div class="position">
-    <div class="row">
-      <h2>
-        GIFT CATALOG
-      </h2>     
-    </div>
-    <div class="row">
-      <p>
-        Give gifts that empower<br>kids to create lasting change.
-      </p>
+  <div class="row">
+    <div class="col-xs-12 col-sm-6"></div>
+    <div class="col-xs-12 col-sm-6">
+      <div class="row">
+        <h2>
+          GIFT CATALOG
+        </h2>     
+      </div>
+      <div class="row">
+        <p>
+          Give gifts that empower<br>kids to create lasting change.
+        </p>
+      </div>
     </div>
   </div>
 </section>
+<section class="container-fluid bgBlue">
+
+  <div>
+    <div class="container">
+      <div class="col-md-8">
+        <h2>
+          Education
+        </h2>
+      </div>
+      <div class="col-md-4">
+
+      </div>      
+    </div>
+  </div>
+</section>
+
