--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <header class="site-header">
 
-  <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+  <nav class="navbar navbar-expand-md navbar-dark bg-steel">
     
     <div class="container  border-bottom">
       <a class="navbar-brand mr-5" routerLink="">
