Section 2 content and styling done

--- a/src/app/homeview/homeview.component.css
+++ b/src/app/homeview/homeview.component.css
@@ -1,5 +1,5 @@
 .img1 {
-  background-image: url(../../assets/Image-1.jpg);
+  background-image:  linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.5)), url(../../assets/Image-1.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -8,6 +8,33 @@
 
 .bgBlue {
   background-color: #33ACCB;  
-  padding: 3rem;
+  padding: 1.5rem;
   /* margin-top: 5rem; */
+}
+
+.bgGlass {
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+  max-width:fit-content;
+  margin-top: 6rem;
+  margin-left: 6rem;
+  padding-left: 1.3em;
+  padding-right: 1.3em;
+  border-radius: 12px;
+}
+
+
+
+
+
+
+/* Small devices (portrait tablets and large phones, 600px and down) */
+@media screen and (max-width: 767px) {
+  .floating {
+    float: right;
+  } 
+}
+
+@media screen and (max-width: 575px) {
+  
 }
