--- a/src/app/homeview/homeview.component.html
+++ b/src/app/homeview/homeview.component.html
@@ -2,15 +2,17 @@
   <div class="row">
     <div class="col-xs-12 col-sm-6"></div>
     <div class="col-xs-12 col-sm-6">
-      <div class="row">
-        <h2>
-          GIFT CATALOG
-        </h2>     
-      </div>
-      <div class="row">
-        <p>
-          Give gifts that empower<br>kids to create lasting change.
-        </p>
+      <div class="bgGlass">
+        <div class="row">
+          <h1>
+            GIFT CATALOG
+          </h1>     
+        </div>
+        <div class="row">
+          <p>
+            Give gifts that empower<br>kids to create lasting change.
+          </p>
+        </div>
       </div>
     </div>
   </div>
@@ -19,15 +21,27 @@
 
   <div>
     <div class="container">
-      <div class="col-md-8">
-        <h2>
-          Education
-        </h2>
-      </div>
-      <div class="col-md-4">
-
+      <div class="row">
+        <div class="col-md-8">
+          <h1>
+            Education
+          </h1>
+          <p>
+            Break the cycle of poverty by supporting education for children in need.
+          </p>
+        </div>
+        <div class="col-md-4">
+          <button type="submit" class="floating btn btn-warning ml-3 mb-3 btn-lg">GIVE NOW <i class="bi bi-arrow-right-square"></i></button>
+        </div>
       </div>      
     </div>
   </div>
 </section>
-
+<section class="container">
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+</section>
