Style the image cards and links

--- a/src/app/homeview/homeview.component.html
+++ b/src/app/homeview/homeview.component.html
@@ -37,11 +37,69 @@
     </div>
   </div>
 </section>
-<section class="container">
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-body">
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+<section class="container mt-3">
+  <div class="card-deck">
+    <div class="card">
+      <a href="#">
+        <img class="card-img-top" src="../../assets/Image-2.jpg" alt="Card image cap">
+      </a>
+      <div class="card-body text-center">
+        <a href="#">
+          <h5 class="card-title paylink">Card title</h5>
+        </a>        
+      </div>
+    </div>
+    <div class="card">
+      <a href="#">
+        <img class="card-img-top" src="../../assets/Image-3.jpg" alt="Card image cap">
+      </a>
+      <div class="card-body text-center">
+        <a href="#">
+          <h5 class="card-title paylink">Card title</h5>
+        </a>        
+      </div>
+    </div>
+    <div class="card">
+      <a href="#">
+        <img class="card-img-top" src="../../assets/Image-4.jpg" alt="Card image cap">
+      </a>
+      <div class="card-body text-center">
+        <a href="#">
+          <h5 class="card-title paylink">Card title</h5>
+        </a>        
+      </div>
+    </div>
+  </div>
+  <div class="card-deck">
+    <div class="card">
+      <a href="#">
+        <img class="card-img-top" src="../../assets/Image-5.jpg" alt="Card image cap">
+      </a>
+      <div class="card-body text-center">
+        <a href="#">
+          <h5 class="card-title paylink">Card title</h5>
+        </a>        
+      </div>
+    </div>
+    <div class="card">
+      <a href="#">
+        <img class="card-img-top" src="../../assets/Image-6.jpg" alt="Card image cap">
+      </a>
+      <div class="card-body text-center">
+        <a href="#">
+          <h5 class="card-title paylink">Card title</h5>
+        </a>        
+      </div>
+    </div>
+    <div class="card">
+      <a href="#">
+        <img class="card-img-top" src="../../assets/Image-7.jpg" alt="Card image cap">
+      </a>
+      <div class="card-body text-center">
+        <a href="#">
+          <h5 class="card-title paylink">Card title</h5>
+        </a>        
+      </div>
     </div>
   </div>
 </section>
