--- a/src/app/homeview/homeview.component.css
+++ b/src/app/homeview/homeview.component.css
@@ -22,6 +22,23 @@
   border-radius: 12px;
 }
 
+.card-body {
+  background-color: #2F2F2F;
+}
+
+.card {
+  border: none;
+}
+
+.paylink {
+  color: #F1EDEF;
+}
+
+.paylink:hover {
+  color: #33ACCB;
+  text-decoration: underline #33ACCB;
+}
+
 
 
 
