Add the amount donation container and style it

--- a/src/app/homeview/homeview.component.html
+++ b/src/app/homeview/homeview.component.html
@@ -31,7 +31,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <button type="submit" class="floating btn btn-warning ml-3 mb-3 btn-lg">GIVE NOW <i class="bi bi-arrow-right-square"></i></button>
+          <button type="submit" class="floating btn btn-warning ml-3 mb-3 btn-lg" routerLink="donation">GIVE NOW <i class="bi bi-arrow-right-square"></i></button>
         </div>
       </div>      
     </div>
