--- a/src/app/donationview/donationview.component.html
+++ b/src/app/donationview/donationview.component.html
@@ -59,6 +59,36 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-6"></div>
+    <div class="col-sm-6">
+      <div class="totals">
+        <div class="row">
+          <div class="col-8">
+            ONE-TIME Giving
+          </div>
+          <div class="col-4">
+            $ 50
+          </div>
+        </div>
+        <div class="row pt-4 font-weight-bold">
+          <div class="col-8">
+            TOTAL
+          </div>
+          <div class="col-4">
+            $ 50
+          </div>
+        </div>
+        <div class="row d-flex justify-content-center pt-3">
+          <button type="submit" class="floating btn btn-warning ml-3 mb-3 btn-lg" routerLink="donation"> PAYPAL <i class="bi bi-paypal"></i></button>
+        </div>
+        <div class="row d-flex justify-content-center pt-1">
+          <h5>
+            Or
+          </h5>
+        </div>
+        <div class="row d-flex justify-content-center pt-1">
+          <button type="submit" class="floating btn btn-warning ml-3 mb-3 btn-lg" routerLink="donation">CHECKOUT ANONYMOUSLY</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
