Update the listing order awaiting consumption

--- a/src/app/homeview/homeview.component.html
+++ b/src/app/homeview/homeview.component.html
@@ -45,17 +45,7 @@
       </a>
       <div class="card-body text-center">
         <a href="#">
-          <h5 class="card-title paylink">Card title</h5>
-        </a>        
-      </div>
-    </div>
-    <div class="card">
-      <a href="#">
-        <img class="card-img-top" src="../../assets/Image-3.jpg" alt="Card image cap">
-      </a>
-      <div class="card-body text-center">
-        <a href="#">
-          <h5 class="card-title paylink">Card title</h5>
+          <h5 class="card-title paylink">Lea Toto Foundation</h5>
         </a>        
       </div>
     </div>
@@ -65,19 +55,7 @@
       </a>
       <div class="card-body text-center">
         <a href="#">
-          <h5 class="card-title paylink">Card title</h5>
-        </a>        
-      </div>
-    </div>
-  </div>
-  <div class="card-deck">
-    <div class="card">
-      <a href="#">
-        <img class="card-img-top" src="../../assets/Image-5.jpg" alt="Card image cap">
-      </a>
-      <div class="card-body text-center">
-        <a href="#">
-          <h5 class="card-title paylink">Card title</h5>
+          <h5 class="card-title paylink">Okoa Dada</h5>
         </a>        
       </div>
     </div>
@@ -87,7 +65,29 @@
       </a>
       <div class="card-body text-center">
         <a href="#">
-          <h5 class="card-title paylink">Card title</h5>
+          <h5 class="card-title paylink">All for One Kenya</h5>
+        </a>        
+      </div>
+    </div>
+  </div>
+  <div class="card-deck">
+    <div class="card">
+      <a href="#">
+        <img class="card-img-top" src="../../assets/Image-3.jpg" alt="Card image cap">
+      </a>
+      <div class="card-body text-center">
+        <a href="#">
+          <h5 class="card-title paylink">Hope Worldwide</h5>
+        </a>        
+      </div>
+    </div>
+    <div class="card">
+      <a href="#">
+        <img class="card-img-top" src="../../assets/Image-5.jpg" alt="Card image cap">
+      </a>
+      <div class="card-body text-center">
+        <a href="#">
+          <h5 class="card-title paylink">Nyumbakumi Initiative</h5>
         </a>        
       </div>
     </div>
@@ -97,7 +97,7 @@
       </a>
       <div class="card-body text-center">
         <a href="#">
-          <h5 class="card-title paylink">Card title</h5>
+          <h5 class="card-title paylink">Sipdada Foundation</h5>
         </a>        
       </div>
     </div>
