--- a/src/app/registerview/registerview.component.html
+++ b/src/app/registerview/registerview.component.html
@@ -11,32 +11,32 @@
 
                 <div class="form-outline mb-4">
                   <label class="form-label" for="form3Example1cg">First Name</label>
-                  <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
+                  <input [(ngModel)]="register.first_name" type="text" id="form3Example1cg" class="form-control form-control-lg"/>
                 </div>
 
                 <div class="form-outline mb-4">
                   <label class="form-label" for="form3Example1cg">Last Name</label>
-                  <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
+                  <input [(ngModel)]="register.last_name" type="text" id="form3Example1cg" class="form-control form-control-lg" />
                 </div>
 
                 <div class="form-outline mb-4">
                   <label class="form-label" for="form3Example1cg">Username *</label>
-                  <input type="text" id="form3Example1cg" class="form-control form-control-lg" required/>
+                  <input [(ngModel)]="register.user_name" type="text" id="form3Example1cg" class="form-control form-control-lg" required/>
                 </div>
 
                 <div class="form-outline mb-4">
                   <label class="form-label" for="form3Example3cg">Your Email *</label>
-                  <input type="email" id="form3Example3cg" class="form-control form-control-lg" required/>
+                  <input [(ngModel)]="register.email" type="email" id="form3Example3cg" class="form-control form-control-lg" required/>
                 </div>
 
                 <div class="form-outline mb-4">
                   <label class="form-label" for="form3Example4cg">Password *</label>
-                  <input type="password" id="form3Example4cg" class="form-control form-control-lg" required/>
+                  <input [(ngModel)]="register.password" type="password" id="form3Example4cg" class="form-control form-control-lg" required/>
                 </div>
 
                 <div class="form-outline mb-4">
                   <label class="form-label" for="form3Example4cdg">Confirm password *</label>
-                  <input type="password" id="form3Example4cdg" class="form-control form-control-lg" required/>
+                  <input [(ngModel)]="register.password" type="password" id="form3Example4cdg" class="form-control form-control-lg" required/>
                 </div>
 
                 <div class="form-check d-flex justify-content-center mb-5">
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="d-flex justify-content-center">
-                  <button type="button" class="btn btn-warning btn-block btn-lg gradient-custom-4 text-body">REGISTER</button>
+                  <button (click)="register()" type="button" class="btn btn-warning btn-block btn-lg gradient-custom-4 text-body">REGISTER</button>
                 </div>
 
                 <p class="text-center text-muted mt-5 mb-0">Already have a Dona account? <a href="login" class="fw-bold text-info"><u>Login here</u></a></p>
