--- a/src/app/registerview/registerview.component.html
+++ b/src/app/registerview/registerview.component.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="d-flex justify-content-center">
-                  <button (click)="register()" type="button" class="btn btn-warning btn-block btn-lg gradient-custom-4 text-body">REGISTER</button>
+                  <button (click)="registration()" type="button" class="btn btn-warning btn-block btn-lg gradient-custom-4 text-body">REGISTER</button>
                 </div>
 
                 <p class="text-center text-muted mt-5 mb-0">Already have a Dona account? <a href="login" class="fw-bold text-info"><u>Login here</u></a></p>
