--- a/src/app/homeview/homeview.component.html
+++ b/src/app/homeview/homeview.component.html
@@ -41,7 +41,7 @@
 
 <!-- Looping through trial -->
 
-<div class="container">
+<!-- <div class="container">
   <div class="row row-cols-1 row-cols-md-3">
     <div class="col mb-4" *ngFor='let charity of charitiesDisplay'>
       <div class="card mt-4">
@@ -53,7 +53,7 @@
       </div>      
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- End of iteration -->
 
@@ -126,9 +126,9 @@
       </div>
     </div>
   </div>
-  <div *ngFor='let charity of charitiesDisplay'>
+  <!-- <div *ngFor='let charity of charitiesDisplay'>
 
     {{charity.users}}
 
-  </div>
+  </div> -->
 </section>
