--- a/src/app/registerview/registerview.component.html
+++ b/src/app/registerview/registerview.component.html
@@ -10,18 +10,18 @@
               <form>
 
                 <div class="form-outline mb-4">
-                  <label class="form-label" for="form3Example1cg">First Name</label>
-                  <input [(ngModel)]="register.first_name" name="first" type="text" id="form3Example1cg" class="form-control form-control-lg"/>
+                  <label class="form-label" for="form3Example1cg1">First Name</label>
+                  <input [(ngModel)]="register.first_name" name="first" type="text" id="form3Example1cg1" class="form-control form-control-lg"/>
                 </div>
 
                 <div class="form-outline mb-4">
-                  <label class="form-label" for="form3Example1cg">Last Name</label>
-                  <input [(ngModel)]="register.last_name" name="last" type="text" id="form3Example1cg" class="form-control form-control-lg" />
+                  <label class="form-label" for="form3Example1cg2">Last Name</label>
+                  <input [(ngModel)]="register.last_name" name="last" type="text" id="form3Example1cg2" class="form-control form-control-lg" />
                 </div>
 
                 <div class="form-outline mb-4">
-                  <label class="form-label" for="form3Example1cg">Username *</label>
-                  <input [(ngModel)]="register.user_name" name="username" type="text" id="form3Example1cg" class="form-control form-control-lg" required/>
+                  <label class="form-label" for="form3Example1cg3">Username *</label>
+                  <input [(ngModel)]="register.user_name" name="username" type="text" id="form3Example1cg3" class="form-control form-control-lg" required/>
                 </div>
 
                 <div class="form-outline mb-4">
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="d-flex justify-content-center">
-                  <button (click)="registration()" type="button" class="btn btn-warning btn-block btn-lg gradient-custom-4 text-body">REGISTER</button>
+                  <button (click)="registration(); loginRedirect('/login');" type="button" class="btn btn-warning btn-block btn-lg gradient-custom-4 text-body">REGISTER</button>
                 </div>
 
                 <p class="text-center text-muted mt-5 mb-0">Already have a Dona account? <a href="login" class="fw-bold text-info"><u>Login here</u></a></p>
