Add a router link to the donation page from a charity link

--- a/src/app/homeview/homeview.component.css
+++ b/src/app/homeview/homeview.component.css
@@ -39,6 +39,11 @@
   text-decoration: underline #33ACCB;
 }
 
+.huvaLink:hover {
+  color: #33ACCB !important;
+  text-decoration: underline #33ACCB;
+}
+
 
 
 
