--- a/src/app/homeview/homeview.component.html
+++ b/src/app/homeview/homeview.component.html
@@ -44,12 +44,13 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col-md-3 mb-4" *ngFor='let charity of charitiesDisplay'>
       <div class="card mt-4">
-        <a href="#" routerLink="donation">        
+        <a  [routerLink]="['/donation/'+charity.id]">        
           <img src="https://donationapp254.herokuapp.com{{ charity.charity_image }}" class="card-img-top" alt="{{charity.location}}">
         </a>
         
+     
         <div class="card-body text-center">
-          <a href="#" routerLink="donation">
+          <a [routerLink]="['/donation/'+charity.id]">
             <h5 class="card-title text-white huvaLink">{{charity.users.user_name}}</h5>
           </a>
         </div>
