Transaction test is working

--- a/src/app/donationview/donationview.component.html
+++ b/src/app/donationview/donationview.component.html
@@ -73,7 +73,7 @@
             $ {{ displayVal1 }}
           </div>
         </div>
-        <div class="row pt-4 font-weight-bold">
+        <div class="row pt-4 font-weight-bold pb-3">
           <div class="col-8">
             TOTAL
           </div>
