--- a/src/app/donationview/donationview.component.html
+++ b/src/app/donationview/donationview.component.html
@@ -12,10 +12,9 @@
         <div class="input-group-prepend">
           <div class="input-group-text">$</div>
         </div>
-        <input type="text" #amount class="form-control" id="amount" placeholder="50">
+        <input type="number" [(ngModel)]="finalAmount" #amount class="form-control" id="amount" placeholder="50">
         <div class="input-group-append">
           <select #frequency class="custom-select" id="selection" required>
-            <option selected>Choose frequency...</option>
             <option value="ONE-TIME">ONE-TIME</option>
             <option value="MONTHLY">MONTHLY</option>
             <option value="YEARLY">YEARLY</option>
@@ -67,7 +66,9 @@
       <div class="totals">
         <div class="row">
           <div class="col-8">
-            {{ displayVal2 }} Giving Frequency
+            Give <strong>
+              {{ displayVal2 }}
+            </strong>
           </div>
           <div class="col-4">
             $ {{ displayVal1 }}
@@ -83,7 +84,7 @@
         </div>
         <div class="row d-flex justify-content-center pt-3">
           
-          <div id="myPaypalButtons">
+          <div class="btn-lg-lg" id="myPaypalButtons">
             <!-- <button type="submit" class="floating btn btn-warning ml-3 mb-3 btn-lg" routerLink="donation"> PAYPAL <i class="bi bi-paypal"></i></button> -->
           </div>
 
@@ -94,7 +95,7 @@
           </h5>
         </div>
         <div class="row d-flex justify-content-center pt-1">
-          <button type="submit" class="floating btn btn-warning ml-3 mb-3 btn-lg" routerLink="donation">CHECKOUT ANONYMOUSLY</button>
+          <button type="submit" class="floating btn btn-warning ml-3 mb-3" routerLink="donation">CHECKOUT ANONYMOUSLY</button>
         </div>
       </div>
     </div>
