--- a/src/app/workview/workview.component.css
+++ b/src/app/workview/workview.component.css
@@ -1,61 +1,7 @@
-.work{
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
-}
-.data_column1{
-    background-image: url('/assets/Image-9.jpg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    height:30vh;
- 
-}
-.data_column2{
-    background-image: url('/assets/Image-10.jpg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    height:30vh;
- 
-}
-.data_column3{
-    background-image: url('/assets/Image-11.jpg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    height:30vh;
- 
-}
-input[type=text]{
-    width:100%;
-    height:50px;
-    border-radius: 10px;
-}
-::placeholder{
-    font-size: 20px;
-}
-label{
-    color:white
-}
-.data_column1 p{
-    position: relative;
-    top: 150px;
-    line-height: 30px;
-    font-size: 20px;
-    text-align: center;
-}
-.data_column2 p{
-    position: relative;
-    top: 150px;
-    line-height: 30px;
+/* .mywork{
+    margin-bottom: 5px;
+} */
 
-    font-size: 20px;
-    text-align: center;
-}
-.data_column3 p{
-    position: relative;
-    top: 150px;
-    line-height: 30px;
-
-    font-size: 20px;
-    text-align: center;
-}
-#add_story{
-    margin: auto;
+.beneficiary_form{
+    padding: 10px;
 }
