--- a/src/app/workview/workview.component.html
+++ b/src/app/workview/workview.component.html
@@ -1,91 +1,77 @@
+
+
 <div class="container mt-5 work">
     <h1 class="text-center text-white ">Our Work</h1>
-    <!-- row 1 -->
+
+
     <div class="row data mt-3">
-        <div class="col-xs-4 col-sm-4 col-md-4">
-            <div class="data_column1"> 
-            <p class="text-white ">Lorem ipsum dolor sit amet <br> consectetur, adipisicing elit.</p>
-        </div>
-        </div>
-        <div class="col-xs-4 col-sm-4 col-md-4 ">
-            <div class="data_column2">
-            <p class="text-white">Lorem ipsum dolor sit amet <br>consectetur, adipisicing elit.</p>
-        </div>
-        </div>
-        <div class="col-xs-4 col-sm-4 col-md-4">
-            <div class="data_column3">
-            <p class="text-white">Lorem ipsum dolor sit amet <br> consectetur, adipisicing elit.</p>
-        </div>
-        </div>   
-         </div>
+        <div class="col-xs-4 col-sm-4 col-md-4" *ngFor="let work of allworks">
+            <div class="mywork">
+                
+                    <img style="width: 100%;" src="http://donationapp254.herokuapp.com{{work.user_image}}" alt="{{work.title}}">
+              
 
-    <!-- /row 1 -->
- 
-<!-- row 2 -->
-<div class="row data">
-<div class="col-xs-4 col-sm-4 col-md-4 ">
-    <div class="data_column1">
-    <p class="text-white ">Lorem ipsum dolor sit amet <br> consectetur, adipisicing elit.</p>
-</div>
-</div>
-<div class="col-xs-4 col-sm-4 col-md-4 ">
-    <div class="data_column2">
-    <p class="text-white">Lorem ipsum dolor sit amet <br>consectetur, adipisicing elit.</p>
-</div>
-</div>
+                    <p  class="text-white">{{work.description}}</p>
 
-<div class="col-xs-4 col-sm-4 col-md-4 ">
-    <div class="data_column3">
-    <p class="text-white">Lorem ipsum dolor sit amet <br> consectetur, adipisicing elit.</p>
-</div>
-</div>   
- </div>
+                    <!-- <select>
+                        <option *ngFor="let work of allworks" [value]="work">{{work}}</option>
 
-<!-- /row 2 -->
-
- <div class="row">
-<div class="col-xs-5 col-sm-5 col-md-5 "></div>
-<div class="col-xs-2 col-sm-2 col-md-2 ">
-    <a href="" id="add_story" class="btn btn-warning mt-1 px-4" >ADD STORY</a>
-
-</div>
-<div class="col-xs-5 col-sm-5 col-md-5 "></div>
-
-</div> 
-
-
-<!-- <p class="text-white mt-4">Sign Up for our monthly Newletter:</p> -->
-
-<!-- <form action="">
-    <div class="row">
-        <div class="col-xs-6 col-sm-6 col-md-6 ">
-            <label for="" >Name:</label>
-        </div>
-        <div class="col-xs-6 col-sm-6 col-md-6 ">
-        <label for="">Email:</label>
+                    </select> -->
+                    <!-- <p  class="text-white" >{{work.charity}}</p> -->
+            </div>
         </div>
     </div>
-<div class="row">
-<div class="col-xs-6 col-sm-6 col-md-6 ">
     <div class="row">
-        <div class="col-xs-6 col-sm-6 col-md-6 ">
-            <input type="text"  placeholder="first name">
+        <div class="col-xs-5 col-sm-5 col-md-5 "></div>
+        <div class="col-xs-2 col-sm-2 col-md-2 ">
+            <a href="" data-toggle="modal" data-target="#add_story1" class="btn btn-warning mt-1 px-4" >ADD STORY</a>
+        
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-6 ">
-            <input type="text" placeholder="last name">
+        <div class="col-xs-5 col-sm-5 col-md-5 "></div>
+        
+        </div> 
+
+
+        <div class="row">
+            <div class="modal fade" id="add_story1" tabindex="-1" role="dialog" aria-labelledby="add_story1Label" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="beneficiary_form">
+                            <h2 class="text-center text-warning ">Add Beneficiaries</h2>
+                            <form enctype="multipart/form-data" [formGroup]="beneficiary" (ngSubmit)="onSubmit()">
+                            <div class="form-group">
+                                <input type="text" formControlName="title" class="form-control" placeholder="Title" required>
+                            </div>
+                            <div class="form-group">
+                                <textarea formControlName="description"  cols="50" rows="5" placeholder="Description" required></textarea>
+                            </div>
+                            <div class="form-group text-dark">
+                                <select formControlName="charity">
+                                    <option *ngFor="let work of allworks" [ngValue]="work.id">{{work.charity.users.user_name}}</option>
+
+                                </select>
+                                <!-- <input type="hidden" [(ngModel)]="beneficiary.charity" value="jitegemee"> -->
+                            </div>
+                            <div class="form-group">
+                                <input formControlName="user_image" class="text-dark" type="file" required>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-4 col-sm-4 col-md-4">
+                                    <div class="form-group">
+                                    <button type="submit"  class="btn btn-warning ">Add Beneficiary</button>
+                                    </div>
+                                </div>
+                                <div class="col-xs-5 col-sm-5 col-md-5"></div>
+                                <div class="col-xs-3 col-sm-3 col-md-3">
+                                    <div class="form-group">
+                                        <a data-dismiss="modal" class="btn btn-secondary">Close</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-<div class="col-xs-6 col-sm-6 col-md-6 ">
-    <div class="row">
-        <div class="col-xs-6 col-sm-6 col-md-6 ">
-            <input type="text" placeholder="example@gmail.com">        
-        </div>
-        <div class="col-xs-6 col-sm-6 col-md-6 ">
-            <input type="submit" style="background: #FFCB74;" class="btn" value="Submit">
-        </div>        
-    </div>
-</div>
-</div>
-</form> -->
 </div>
