add the components files

--- a/src/app/aboutview/aboutview.component.html
+++ b/src/app/aboutview/aboutview.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid top_section">
+<div class="container-fluidz top_section">
     <div class="row">
     <div class="col-xs-2 col-sm-2 col-md-2"></div>
     <div class="col-xs-10 col-sm-10 col-md-10">
@@ -12,8 +12,9 @@
 <div class="container-fluid middle_section" style="background-color: #F6F6F6;
 ;">
 <div class="container mt-1" style="height:auto">
-    <p class="text-center h5 pt-3">Lorem ipsum dolor sit amet <br>consectetur, adipisicing elit.</p>
-    <p class="h5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quo tempore quia accusamus neque, aliquam expedita. Expedita eaque, optio, tempore a consequatur tempora ipsam quis numquam itaque veritatis possimus exercitationem.</p>
+    <p class="text-center  pt-3">Dangerously soft-hearted. <br> But just the right kind of dangerous.</p>
+    <p class="h6">That's because we're a global Christian humanitarian organization. We partner with children, families, and their communities to reach their full</p>
+    <p class="text-center">potential by tackling the causes of poverty and injustice. </p>
 <div class="row">
 
     <div class="col-xs-5 col-sm-5 col-md-5"></div>
